Fix padding on smaller entries

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -79,6 +79,7 @@
           background-color: #fff;
           .image {
             flex: 0 30%;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
